web-application-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-application 
  name: web-application 
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: web-application
  template:
    metadata:
      labels:
        app: web-application
    spec:
      containers:
      - image: example/boot2:latest
        name: web-application
        imagePullPolicy: Never
