mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: ClusterIP
  selector:
    name: lbl-k8s-mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: mysql-port
