web-application-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-application
  labels:
    app: web-application
spec:
  type: ClusterIP
  selector:
    app: web-application
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8081
